syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result = 1;
}

service CalculatorService {
    // sum service
    rpc Sum(SumRequest) returns (SumResponse) {};
}
